<resources>
    <string name="app_name" translatable="false">Sunfy</string>
    <string name="home_fragment_menu">Home</string>
    <string name="awaiting_fragment_menu">To Do</string>
    <string name="subjects_fragment_menu">Subjects</string>
    <string name="average_fragment_menu">Averages</string>
    <string name="subject">Tag</string>
    <string name="awaiting">Awaiting</string>
    <string name="settings_menu">Settings</string>
    <string name="task_is_open">Open</string>
    <string name="task_is_close">Overdue</string>
    <string name="new_string">NEW</string>
    <string name="title_string">Title</string>
    <string name="description_string">Description</string>
    <string name="Date_string">Deadline</string>
    <string name="create_subject">Add Subject</string>
    <string name="select_subject">Choose subject</string>
    <string name="name_string">Name</string>
    <string name="Accept_M">Accept</string>
    <string name="Cancel_M">Cancel</string>
    <string name="name_is_empty">Name is Empty</string>
    <string name="done_string">Done</string>
    <string name="on_hold_string">On Hold</string>
    <string name="losed_string">Losed</string>
    <string name="check">Check</string>
    <string name="delete">Delete</string>
    <string name="day_left">Day(s) left</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="you_have">You have</string>
    <string name="pending_activities">activities to do</string>
    <string name="in_process_activities">in process activities</string>
    <string name="pending_activity">activity to do</string>
    <string name="its_time_to_do_homework">It\'s time to do HOMEWORK!</string>
    <string name="dont_forgot">Don\'t forgot, it\'s time to do homework</string>
    <string name="didnt_you_do">Didn\'t you do your homework? ¡it\'s time to do!</string>
    <string name="theme">Themes</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="remember_every_day">Remember Every Day</string>
    <string name="set_homework_time">Set Homework Time</string>
    <string name="version">Version</string>
    <string name="see_more">See more</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wendnesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">december</string>
    <string name="m_january">Jan</string>
    <string name="m_february">Feb</string>
    <string name="m_march">Mar</string>
    <string name="m_april">Apr</string>
    <string name="m_may">May</string>
    <string name="m_june">Jun</string>
    <string name="m_july">Jul</string>
    <string name="m_august">Aug</string>
    <string name="m_september">Sepr</string>
    <string name="m_october">Oct</string>
    <string name="m_november">Nov</string>
    <string name="m_december">Dec</string>
    <string name="app_widget_description">Tasks in home screen</string>
    <string name="you_havent_tasks">You Haven\'t Tasks</string>
    <string name="notify_with_an_alarm">Notify with an alarm</string>
    <string name="required_permissions">Required permissions ;)</string>
    <string name="permissions_description">This app needs permissions for some features to work properly</string>
    <string name="permissions_read_contacts_description">The application needs permissions to read contacts to be able to use the application\'s chat</string>
    <string name="permissions_wres">We needs permissions to Write or Read external storage to save images</string>
    <string name="permissions_camera">We needs permissions to open camera to capture images</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="permissions_denied_description">Permissions were denied, so the feature is not available</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="free_day">Today is a free day!</string>
    <string name="nothing_to_do">Nothing to do</string>
    <string name="calendar">Calendar</string>
    <string name="m_monday">Mon</string>
    <string name="m_tuesday">Tue</string>
    <string name="m_wednesday">Wen</string>
    <string name="m_thursday">Thu</string>
    <string name="m_friday">Fri</string>
    <string name="m_saturday">Sat</string>
    <string name="m_sunday">Sun</string>
    <string name="min_monday">M</string>
    <string name="min_tuesday">T</string>
    <string name="min_wednesday">W</string>
    <string name="min_thursday">T</string>
    <string name="min_friday">F</string>
    <string name="min_saturday">S</string>
    <string name="min_sunday">S</string>
    <string name="your_subject">Your subject</string>
    <string name="is_going_to_start">is going to start!</string>
    <string name="schedule">Schedule</string>
    <string name="Calendar">Calendar</string>
    <string name="activity">Task</string>
    <string name="events">Events</string>
    <string name="add">Add</string>
    <string name="made_by_artwork_studios">Created by ARTWORK STUDIOS</string>
    <string name="menu">Menu</string>
    <string name="pending_tasks">To do tasks</string>
    <string name="completed_tasks">Tasks completed</string>
    <string name="averaged_tasks">Average time to complete a task</string>
    <string name="weekly_summary">Weekly Summary</string>
    <string name="tasks_alarm">Tasks Alarms</string>
    <string name="uncheck">Uncheck</string>
    <string name="uncheck_task">When you uncheck a task, you are removing it from the completed tasks</string>
    <string name="remove">Remove?</string>
    <string name="remove_task">If you remove a task, you can\'t recover it never</string>
    <string name="congratulations_1">Thanks to your great analytical skills, you have managed to complete all your pending activities. Let\'s continue working together to reach new achievements. It may not seem like much, but thanks to your efficiency and good decision-making, you can achieve any goal you set for yourself. Keep it up!</string>
    <string name="pending_tasks_alarm">Pending Tasks Alarm</string>
    <string name="tomorrows_Tasks">Tomorrow\'s Tasks</string>
    <string name="tomorrows_subjects">Tomorrow\'s Subjects</string>
    <string name="tomorrows_tasks_sound">Tomorrow\'s Tasks\'s Tone</string>
    <string name="tomorrows_subjects_sound">Tomorrow\'s Subjects\'s Tone</string>
    <string name="pending_tasks_sound">Pending Tasks\'s Tone</string>
    <string name="will_end">will end tomorrow at</string>
    <string name="yht_for_tomorrow">You Haven\'t Tasks For Tomorrow</string>
    <string name="notifications">Notifications</string>
    <string name="dismiss">Dismiss</string>
    <string name="overdue_tasks">Overdue Tasks</string>
    <string name="chat">Chat</string>
    <string name="resend">Resend</string>
    <string name="log_out">Log Out</string>
    <string name="sure_log_out_text">Are you sure that you want log out?</string>
    <string name="del_conv">Delete Conversations</string>
    <string name="sure_del_conv">Are you sure that you want delete all conversation in device?</string>
    <string name="register_text">Register with your phone number to be able to chat</string>
    <string name="Log_In">Log In</string>
    <string name="permission_contacts">Contacts Permission</string>
    <string name="allow">Allow</string>
    <string name="rc_valiting">validating reCaptcha</string>
    <string name="wait_moment">wait a moment please</string>
    <string name="verify">Verify</string>
    <string name="write_code_sms">Write the code you received in sms</string>
    <string name="danger_zone">Danger zone</string>
    <string name="del_all">Delete All</string>
    <string name="close_pho_sesion">Close Phone Session</string>
    <string name="alarms">Alarms</string>
    <string name="project_delete">will be deleted, along with its tags, tasks and schedules. This decision will be permanent and cannot be recovered.</string>
    <string name="subject_delete">will be deleted, along with its tasks and schedules</string>
    <string name="enter_code">Enter code</string>
    <string name="login_able_chat">Login to be able to chat</string>
    <string name="add_images">New image</string>
    <string name="capture_image">Capture image</string>
    <string name="select_in_device">Select in device</string>
    <string name="data_saver_mode">Data saver mode</string>
    <string name="use_wifi">Use WiFi only</string>
    <string name="active_wifi_saver">Activate to use internet once Sunfy has access to a WiFi network. Limits the use of mobile data and consumes fewer resources</string>
    <string name="choose_color">Choose color</string>
    <string name="choose_day">Choose day</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="you">You</string>
    <string name="task">Task</string>
    <string name="version_changes">We hope you enjoy this new update!</string>
    <string name="version_code" translatable="false">1.1.1</string>
    <string name="v_unstable">Unstable version</string>
    <string name="contact_with_progr_unstable_v">This version could be unstable and may produce error (closes the app or app useless), in this case contact with tha programmer and tell him the problem.</string>
    <string name="del_4_all">Delete for everyone</string>
    <string name="del_4_me">Delete for me</string>
    <string name="nchat">New chat</string>
    <string name="messages">Messages</string>
    <string name="want_delete_message">Do you want delete this message?</string>
    <string name="want_delete_messages">Do you want delete that messages?</string>
    <string name="perntesis_deadline" />
    <string name="no_themes_tomorrow">You haven\'t subjects tomorrow</string>
    <string name="pending">To do</string>
    <string name="overdue">overdue</string>
    <string name="ad">Ad</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_night">Good night…</string>
    <string name="share">Share to</string>
    <string name="group_name">Group\'s name</string>
    <string name="new_group">New group</string>
    <string name="create">Create</string>
    <string name="tip">Tip</string>
    <string name="ct_note1">Define clear and specific objectives for each task</string>
    <string name="ct_note2">Prioritize tasks based on urgency and importance</string>
    <string name="ct_note3">Assign a realistic deadline for each task.</string>
    <string name="ct_note4">Break large tasks into smaller, more manageable tasks.</string>
    <string name="ct_note5">Use a clear and concise description for each task.</string>
    <string name="ct_note6">Assign tags to tasks to classify them according to their category.</string>
    <string name="ct_note7">Use reminders so you don\'t forget important tasks.</string>
    <string name="backup_manager">Backup Manager</string>
    <string name="bakcup_manager_desc">Manage, create and recover backups on the device and in the cloud</string>
    <string name="donate">Donate</string>
    <string name="help_us">Help us improve the application and add new features.</string>
</resources>