<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subject"
            android:icon="@drawable/ic_layers"
            android:title="@string/subjects_fragment_menu" />
        <item
            android:id="@+id/nav_averages"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/average_fragment_menu" />


        <item android:title="@string/settings_menu">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings_menu" />
            </menu>
        </item>
    </group>
</menu>