<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:backgroundTint="?backgroundDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_string"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/title_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:background="@drawable/textinput_background"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:background="@drawable/button_border"
            android:padding="10dp"
            android:text="@string/Cancel_M" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/accept_subject"
            android:layout_width="match_parent"
            android:background="@drawable/button"
            android:layout_height="wrap_content"
            android:text="@string/Accept_M"
            android:textColor="?backgroundDialog"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:padding="15dp" />
    </LinearLayout>


</LinearLayout>