<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bottom_bg"
    android:backgroundTint="?backgroundDialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:paddingBottom="15dp"
        android:background="@drawable/background_top"
        android:textFontWeight="500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/deleteSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_trash"
                app:tint="@color/red_500" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/red_500"
                android:textSize="18sp"
                android:layout_marginStart="4dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>